# matchboxnet

./: .buildinfo  README.md  audio-classification-model.html  configuration.html  dataset.html  features-extractor.html  genindex.html  index.html  installation.html  matchboxnet.html  model.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  utils.html
.doctrees/: configuration.doctree
.github/workflows/: documentation.yml
_sources/: index.rst.txt  installation.rst.txt  matchboxnet.rst.txt  modules.rst.txt  utils.rst.txt
docs/source/: audio-classification-model.rst  conf.py
exemples/: matchboxnet.ipynb
exemples/rien/: voice_19-06-2025_19-39-11  voice_19-06-2025_19-39-22  voice_19-06-2025_19-39-58  voice_19-06-2025_19-40-05
matchboxnet/: config.py  dataset.py  feature_extraction.py  model.py  utils.py
